--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,17 @@
 
     <h1>Sprint 4 IT ACADEMY</h1>
     
+
+    <script src="data.js"></script>
+    <script src="films.js"></script>
+    <script>
+    getAllDirectors(movies)
+    getMoviesFromDirector(movies, 'Akira Kurosawa')
+    moviesAverageOfDirector(movies, 'Akira Kurosawa')
+    orderAlphabetically(movies)
+    orderByYear(movies)
+
+    </script>
 </body>
 
 </html>
