--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
 
     <h1>Sprint 4 IT ACADEMY</h1>
     
-
     <script src="data.js"></script>
     <script src="films.js"></script>
     <script>
@@ -14,6 +13,7 @@
     moviesAverageOfDirector(movies, 'Akira Kurosawa')
     orderAlphabetically(movies)
     orderByYear(movies)
+    moviesAverageByCategory(movies, 'Music')
 
     </script>
 </body>
