starting ex 7, orderAlphabetically corrected

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     orderAlphabetically(movies)
     orderByYear(movies)
     moviesAverageByCategory(movies, 'Music')
+    hoursToMinutes(movies)
 
     </script>
 </body>
